# openmp-sat-solver

./: .gitignore  CMakeLists.txt  README.md
include/: debug.hh  parser.hh  solver.hh
results/: plot.ipynb
results/fixed-size/: row-uf50-218.csv  row-uuf50-218.csv  serial-uf50-218.csv  serial-uuf50-218.csv
results/problem-size/: parallel-mc17-sat.csv  parallel-mc18-unsat.csv  parallel-mc20-sat.csv  serial-mc17-sat.csv  serial-mc20-sat.csv
results/threads/: t-1.csv  t-10.csv  t-11.csv  t-12.csv  t-13.csv  t-14.csv  t-15.csv  t-16.csv  t-17.csv  t-18.csv  t-19.csv  t-2.csv  t-20.csv  t-21.csv  t-22.csv  t-23.csv  t-24.csv  t-25.csv  t-26.csv  t-27.csv  t-28.csv  t-29.csv  t-3.csv  t-30.csv  t-31.csv  t-32.csv  t-4.csv  t-5.csv  t-6.csv  t-7.csv  t-8.csv  t-9.csv
src/: CMakeLists.txt  debug.hh  instance.cc  instance.hh  main.cc  model.cc  model.hh  parser.cc  parser.hh  solver.cc  solver.hh  verify.hh
src/cli/: main.cc
src/parser/: parser.cc
src/serial/: solver.cc
test/: CMakeLists.txt  main.cc
